syntax = "proto3";

package auth;

option go_package = "photobox-auth/proto";

service AuthService {
    rpc GoogleSignup (GoogleSignupRequest) returns (GoogleSignupResponse);
    rpc GoogleLogin (GoogleLoginRequest) returns (GoogleLoginResponse);
}

message GoogleSignupRequest {}

message GoogleSignupResponse {
    string url = 1;
}

message GoogleLoginRequest {
    string code = 1;
}

message GoogleLoginResponse {
    string token = 1;
}